# model_fitting

./: CMakeLists.txt  README.md  package.xml
config/: lidar_config.yaml  model.rviz  topic_config.txt
data/: lidar_data_raw.csv
include/: LidarProcessor.hpp  kalman_filter.h  kalman_filter.hpp  lidar_processing.hpp  line.hpp  model.hpp  point_types.h  ransac.hpp  types.hpp
launch/: lidar.launch  rviz.launch
script/: LidarProcessor_node.cpp
src/: LidarProcessor.cpp  kalman_filter.cpp  lidar_processing.cpp  line.cpp  model.cpp  ransac.cpp  types.cpp
